fix the screen overflow and finish adapting the registration screen for laptops

--- a/public/authResponsive.scss
+++ b/public/authResponsive.scss
@@ -5,6 +5,7 @@
 
         .registration{
             width: 85%;
+
             h2{
                 font-size: 38px;
                 align-items: center;
@@ -21,6 +22,9 @@
                             }
                         }
                     }
+                }
+                .buttons{
+                    margin-top: 50px;
                 }
             }
         }
